Updates sizes, fixed some responsiveness, aligned the edit icons, full width drop zones in multi column

--- a/scss/form-builder.scss
+++ b/scss/form-builder.scss
@@ -1,12 +1,12 @@
 .react-form-builder {
   .react-form-builder-preview {
-    position: relative;
-    width: 70%;
+    // position: relative;
+    // width: 70%;
     border: 1px solid #ddd;
     background: #fafafa;
     padding: 10px;
     box-shadow: 0 0 2px 1px rgba(0,0,0,0.1);
-    min-height: 750px;
+    // min-height: 750px;
 
     .preview-page-break {
       padding: 5px 0;
@@ -189,6 +189,7 @@
           .toolbar-header-buttons {
             position: absolute;
             right: 20px;
+            margin-top:-20px;
           }
         }
         &:hover {
@@ -409,7 +410,7 @@
   -moz-border-radius:5px;
   -webkit-border-radius:5px;
   border-radius:5px;
-  padding:25px;
+  padding:5px;
   text-align:center;
   font:20pt bold,"Vollkorn";color:#bbb
 }
